Correct libcurl crash when downloading local files. https://bugs.webkit.org/show_bug.cgi?id=28312

Reviewed by Kevin Ollivier.

No new tests. Test is covered by fast/encoding/char-encoding-mac.html.

* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::handleLocalReceiveResponse): New static function that
  performs the local setting of valid URL and firing didReceiveResponse.
  This code was moved from writeCallback.
(WebCore::writeCallback): Move local file handling to static function
  (above) and use the function instead.
(WebCore::readCallback): Add check
  for responseFired, and handle as a local file if it was not.



Canonical link: https://commits.webkit.org/38900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47299 268f45cc-cd09-0410-ab3c-d52691b4dbfc